cli/test/fixtures/bad/shadow_overuse.dart
// Bad: excessive elevation
final w = Card(elevation: 16);
final m = Material(elevation: 24);
